mass dispatch UI, and i18n

--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -61,7 +61,7 @@
     dataKey="code"
     scrollHeight="400px"
     currentPageReportTemplate="{first} - {last} of {totalRecords}"
-    [globalFilterFields]="['description', 'code']"
+    [globalFilterFields]="['description', 'exceptions_remark_code']"
     [sortField]="'is_authorized'" [sortOrder]="1"
   >
 
